Fix img height on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -110,7 +110,7 @@
 
 img.article-image {
     width: 100%;
-    height: 378px;
+    height: 55%;
 }
 
 .portfolio-max-width {
@@ -191,4 +191,11 @@ footer {
 #trailer-video-container>iframe {
     height: 100%;
     width: 100%;
+}
+
+@media (max-width: 600px) {
+    img.article-image {
+        width: 100%;
+        height: 80%;
+    }
 }
